--- a/StudentAssignment/demo/pom.xml
+++ b/StudentAssignment/demo/pom.xml
@@ -29,9 +29,14 @@
     <groupId>org.apache.tomcat.embed</groupId>
     <artifactId>tomcat-embed-jasper</artifactId>
 	<scope>provided</scope>
+
     
 </dependency>
-
+ <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.27</version>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
